--- a/examples/client.toml
+++ b/examples/client.toml
@@ -29,70 +29,70 @@ path = "/var/lib/GeoIP/GeoIP2-Anonymous-IP.mmdb"
 [[columns]]
 name = "country_iso"
 database = "enterprise"
-path = "/country/iso_code"
+path = ["country", "iso_code"]
 
 [[columns]]
 name = "country_name"
 database = "enterprise"
-path = "/country/names/en"
+path = ["country", "names", "en"]
 
 [[columns]]
 name = "subdivision_iso"
 database = "enterprise"
-path = "/subdivisions/0/iso_code"
+path = ["subdivisions", 0, "iso_code"]
 
 [[columns]]
 name = "subdivision_name"
 database = "enterprise"
-path = "/subdivisions/0/names/en"
+path = ["subdivisions", 0, "names", "en"]
 
 [[columns]]
 name = "city_name"
 database = "enterprise"
-path = "/city/names/en"
+path = ["city", "names", "en"]
 
 [[columns]]
 name = "latitude"
 database = "enterprise"
-path = "/location/latitude"
+path = ["location", "latitude"]
 
 [[columns]]
 name = "longitude"
 database = "enterprise"
-path = "/location/longitude"
+path = ["location", "longitude"]
 
 [[columns]]
 name = "accuracy_radius"
 database = "enterprise"
-path = "/location/accuracy_radius"
+path = ["location", "accuracy_radius"]
 
 # GeoIP2-Anonymous-IP fields
 [[columns]]
 name = "is_anonymous"
 database = "anonymous"
-path = "/is_anonymous"
+path = ["is_anonymous"]
 
 [[columns]]
 name = "is_anonymous_vpn"
 database = "anonymous"
-path = "/is_anonymous_vpn"
+path = ["is_anonymous_vpn"]
 
 [[columns]]
 name = "is_hosting_provider"
 database = "anonymous"
-path = "/is_hosting_provider"
+path = ["is_hosting_provider"]
 
 [[columns]]
 name = "is_public_proxy"
 database = "anonymous"
-path = "/is_public_proxy"
+path = ["is_public_proxy"]
 
 [[columns]]
 name = "is_tor_exit_node"
 database = "anonymous"
-path = "/is_tor_exit_node"
+path = ["is_tor_exit_node"]
 
 [[columns]]
 name = "is_residential_proxy"
 database = "anonymous"
-path = "/is_residential_proxy"
+path = ["is_residential_proxy"]
