--- a/examples/parquet.toml
+++ b/examples/parquet.toml
@@ -43,29 +43,29 @@ path = "GeoIP2-City.mmdb"
 [[columns]]
 name = "country_code"
 database = "city"
-path = "/country/iso_code"
+path = ["country", "iso_code"]
 type = "string"                     # Explicit string type (default if not specified)
 
 [[columns]]
 name = "latitude"
 database = "city"
-path = "/location/latitude"
+path = ["location", "latitude"]
 type = "float64"                    # Native float64 type for numeric data
 
 [[columns]]
 name = "longitude"
 database = "city"
-path = "/location/longitude"
+path = ["location", "longitude"]
 type = "float64"
 
 [[columns]]
 name = "accuracy_radius"
 database = "city"
-path = "/location/accuracy_radius"
+path = ["location", "accuracy_radius"]
 type = "int64"                      # Native int64 type for integer data
 
 [[columns]]
 name = "city_name"
 database = "city"
-path = "/city/names/en"
+path = ["city", "names", "en"]
 # No type specified - defaults to string
