--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: gomod
+    directory: /
     schedule:
-      interval: "weekly"
-      day: "monday"
+      interval: daily
+      time: '14:00'
     open-pull-requests-limit: 10
-    commit-message:
-      prefix: "deps"
-      include: "scope"
     cooldown:
       default-days: 7
   - package-ecosystem: github-actions
